user signup post and login form

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
-<h1>Tattoo Artists, Create Your Account Here!</h1>
-<form method="POST" action="/users/signup">
-    <label for="name"> Name:</label>
-    <input type="text" name="Name">
-
+<h1>Nice seeing you again! Login Here!</h1>
+<form method="POST" action="/users/login">
+   
     <label for="email"> Email:</label>
     <input type="email" name="Email">
 
