Fixed signup form to save user & added session

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <h1>Tattoo Artists, Create Your Account Here!</h1>
+<br>
 <form method="POST" action="/users/signup">
     <label for="name"> Name:</label>
-    <input type="text" name="Name">
+    <input type="text" name="name">
 
     <label for="email"> Email:</label>
-    <input type="email" name="Email">
+    <input type="email" name="email">
 
     <label for="password"> Password: </label>
-    <input type="password" name="Password"  autocomplete="off">
+    <input type="password" name="password"  autocomplete="off">
     <br>
     <input type="submit" value="Sign-Up">
 </form>
