added helper methods and fixed login

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,11 +5,11 @@
 <form method="POST" action="/users/login">
    
     <label for="email"> Email:</label>
-    <input type="email" name="Email">
+    <input type="email" name="email">
 
     <label for="password"> Password: </label>
-    <input type="password" name="Password"  autocomplete="off">
+    <input type="password" name="password"  autocomplete="off">
     <br>
-    <input type="submit" value="Sign-Up">
+    <input type="submit" value="Login">
     
 </form>
