--- a/app/views/clients/new.erb
+++ b/app/views/clients/new.erb
@@ -8,11 +8,11 @@
     <br>
     Last Name: <input type="text" name="last_name">
     <br>
-    Design Description: <input type="text" name="design_description">
+    Design Description: <input type="text" name="description">
     <br>
     Design Location: <input type="text" name="location">
     <br>
-    Quoted PRice: $<input type="number" name="price">
+    Quoted Price: $<input type="number" name="price">
     <br>
     Appointment Date: <input type="date" name="appt_date">
     <br>
