fixed multiple syntax errors

--- a/app/views/clients/index.erb
+++ b/app/views/clients/index.erb
@@ -4,7 +4,7 @@
 
 Name: <%= client.first_name%>
       <%= client.last_name%>
-Design Description: <% client.design_description%>
+Design Description: <% client.description%>
 Location: <% client.location%>
 Price: $<% client.price%>
 Appointment Date & Time <% client.appt_date%>
