--- a/app/views/clients/new.erb
+++ b/app/views/clients/new.erb
@@ -14,8 +14,8 @@
     <br>
     Quoted Price: $<input type="number" name="price">
     <br>
-    Appointment Date: <input type="date" name="appt_date">
+    Appointment Date: <input type="datetime-local" name="appt_date">
     <br>
-    Appointment Time: <input type="time" name="appt_time">
+    <%# Appointment Time: <input type="time" name="appt_time"> %>
    
     <input type="submit" value="Add Client">
