--- a/app/views/clients/show.erb
+++ b/app/views/clients/show.erb
@@ -1,1 +1,13 @@
-A users clients
+<!DOCTYPE html>
+
+
+
+Name: <%= @client.first_name%>
+      <%= @client.last_name%><br>
+Design Description: <%= @client.description%><br>
+Location: <%= @client.location%><br>
+Price: $<%= @client.price%><br>
+Appointment Date & Time <%= @client.appt_date%>
+        <%= @client.appt_time%>
+
+
