--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -7,7 +7,7 @@
     <input type="text" name="name">
 
     <label for="email"> Email:</label>
-    <input type="email" name="email">
+    <input type="email" name="email" autocomplete="off">
 
     <label for="password"> Password: </label>
     <input type="password" name="password"  autocomplete="off">
