--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+     <%# <div class="nav"> %>
+      <%# <a href="/users/:id"> Home</a><br> %>
+      <%# <a href="/clients/:id/index">View All Clients</a><br> %>
+      <%# <a href="/clients/new">Add A Client</a><br> %>
+      <%# <a href=<%"/users/#{@user.id}/logout">Logout</a> %>
+      <%# </div> %> %>
     <div class="wrapper">
 
         <%= yield %>
