--- a/app/views/clients/show.erb
+++ b/app/views/clients/show.erb
@@ -7,7 +7,7 @@ Name: <%= @client.first_name%>
 Design Description: <%= @client.description%><br>
 Location: <%= @client.location%><br>
 Price: $<%= @client.price%><br>
-Appointment Date & Time <%= @client.appt_date%>
-        <%= @client.appt_time%>
+Appointment Date: <%= @client.appt_date%>
+        
 
 
