fixed sessions and user login

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,25 +7,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <title>InkComplete</title>
+    <title>Basic</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-     <%# <div class="nav"> %>
-      <%# <a href="/users/:id"> Home</a><br> %>
-      <%# <a href="/clients/:id/index">View All Clients</a><br> %>
-      <%# <a href="/clients/new">Add A Client</a><br> %>
-      <%# <a href=<%"/users/#{@user.id}/logout">Logout</a> %>
-      <%# </div> %> %>
     <div class="wrapper">
 
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2020 <strong>InkComplete</strong></small>
+        <small>&copy; 2020 <strong>Basic</strong></small>
       </footer>
     </div>
 
