--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+  <div class="nav">
+    <a href="/">Home</a><br>
+    <a href="/clients">View Clients</a><br>
+    <a href="/clients/new">Add A Client</a>
+
+  </div>
     <div class="wrapper">
 
         <%= yield %>
