basic styling needs much more work

--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-
 <h1>Tattoo Artists, Create Your Account Here!</h1>
 <br>
 <form method="POST" action="/users/signup">
     <label for="name"> Name:</label>
-    <input type="text" name="name">
+    <input type="text" name="name" autocomplete="off">
 
     <label for="email"> Email:</label>
     <input type="email" name="email" autocomplete="off">
