--- a/app/views/clients/index.erb
+++ b/app/views/clients/index.erb
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-
-
 <% @clients.each do |client| %>
 
+<div class="wrapper">
 <h3><%= client.first_name%>
       <%= client.last_name%></h3>
 <p>Design Description: <%= client.description%><br>
 Location: <%= client.location%><br>
 Price: $<%= client.price%><br>
-Appointment Date: <%= client.appt_date%></p>
+Appointment Date: <%= client.appt_date%></p><br>
+</div>
         
 <% end %>
