--- a/app/views/clients/new.erb
+++ b/app/views/clients/new.erb
@@ -1,18 +1,15 @@
-<h1> Form here to create a client</h1>
+<div class="inner-wrapper">
+    <h1> BOOK YOUR NEW CLIENT</h1>
 
-<form method="POST" action="/clients/new">
+        <form method="POST" action="/clients/new">
 
-    First Name: <input type="text" name="first_name">
-    <br>
-    Last Name: <input type="text" name="last_name">
-    <br>
-    Design Description: <input type="text" name="description">
-    <br>
-    Design Location: <input type="text" name="location">
-    <br>
-    Quoted Price: $<input type="number" name="price">
-    <br>
-    Appointment Date: <input type="date" name="appt_date">
-    <br>
-   
-    <input type="submit" value="Add Client">
+            <p>First Name: <input type="text" name="first_name"></p>
+            <p>Last Name: <input type="text" name="last_name"></p>
+            <p>Design Description: <input type="text" name="description"></p>
+            <p>Design Location: <input type="text" name="location"></p>
+            <p>Quoted Price: $<input type="number" name="price"></p>
+            <p>Appointment Date: <input type="date" name="appt_date"></p>
+        
+            <input type="submit" value="BOOK CLIENT">
+    </form>
+</div>
