--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,10 +1,18 @@
 
-<p>Your one stop shop for Tattoo Artist Client Management!</p>
-<h3> No More Wasted Pages </h3>
-<p>Your pen and pad should be used for artwork. Not scheduling.</p>
-<h3>Stop Filtering Through Email After Email</h3>
+
+    
+    
+    <p>Your pen and pad should be used for <h1>ART</h1>NOT scheduling.</p>
+    
 <br>
 
-<a href="/users/signup">Sign Up Here</a><br>
-<a href="/users/login">Login Here</a>
+
+
+
+    <div class="inner-wrapper">
+        <a href="/users/signup">Sign Up Here</a>
+    <br>
+    <a href="/users/login">Login Here</a>
+    </div>
+
 
