--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
     <title>Ink Complete!</title>
 
@@ -9,28 +15,31 @@
     <header>
       <div class="main">
         <ul>
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/clients">View Clients</a></li>
           <li><a href="/clients/new">Add A Client</a></li>
           <li><a href="/users/:id/logout">Logout</a></li>
         </ul>
       </div>
       <div class="title">
-      <h1> !nk Complete </h1>
+      <h1> !NK COMPLETE </h1>
       </div>
-  
     </header>
-  
-  
     <div class="wrapper">
 
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2020 <strong>Ink Complete</strong></small>
+        <small>&copy; 2020 <strong>!NK COMPLETE</strong></small>
       </footer>
     </div>
 
-    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <!--[if lt IE 7]>
+      <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
+      <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+    <![endif]-->
   </body>
 </html>
+
+
