--- a/app/views/clients/show.erb
+++ b/app/views/clients/show.erb
@@ -5,9 +5,10 @@ Location: <%= @client.location%><br>
 Price: $<%= @client.price%><br>
 Appointment Date: <%= @client.appt_date%><br><br>
         
-
+<%if authorized?(@client)%>
       <a href="/clients/<%= @client.id %>/edit"> Edit Client Info </a><br><br>   
       <form method="POST" action="/clients/<%= @client.id %>" >
             <input type="hidden" name="_method" value="DELETE">
             <input type="submit" value="Remove Client">
       </form>
+<%end%>
