forms working again

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h1>Nice seeing you again! Login Here!</h1>
+<h1>Nice seeing you again!</h1>
 <br>
 <form method="POST" action="/users/login">
    
@@ -7,6 +7,7 @@
 
     <label for="password"> Password: </label>
     <input type="password" name="password"  autocomplete="off">
+    <br>
     <br>
     <input type="submit" value="Login">
     
