--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,14 +1,17 @@
-<h1>Tattoo Artists, Create Your Account Here!</h1>
+<!DOCTYPE html>
+
+
+<h1>Create A New Account!</h1>
 <br>
 <form method="POST" action="/users/signup">
-    <label for="name"> Name:</label>
-    <input type="text" name="name" autocomplete="off">
+    <p><label for="name"> Name:</label>
+    <input type="text" name="name" autocomplete="off"></p>
 
-    <label for="email"> Email:</label>
-    <input type="email" name="email" autocomplete="off">
+    <p><label for="email"> Email:</label>
+    <input type="email" name="email" autocomplete="off"></p>
 
-    <label for="password"> Password: </label>
-    <input type="password" name="password"  autocomplete="off">
-    <br>
+    <p><label for="password"> Password: </label>
+    <input type="password" name="password"  autocomplete="off"></p>
+    
     <input type="submit" value="Sign-Up">
 </form>
