--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -1,163 +1,113 @@
-@media screen {
-    *{
-    margin: auto;
-    padding: auto;
-    font-family: "Courier New", Courier, monospace
-  }
-
-  html {
-    background-image:linear-gradient(rgb(0,0,0,0.5),rgba(0,0,0,0.5)), url(../images/pexels-cottonbro.jpg); 
-    height: 85vh;
-    background-size: cover;
-    background-position: center;
-    background-color: #000;
-  }
-
-  .wrapper {
-    background: rgb(247, 238, 238);
-    -moz-box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    -webkit-box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    margin: 100px 30px;
-    max-width: 960px;
-    padding: 2.25%; /* 18px / 800px */
-    width: 40%;
-    text-align: center;
-  }
-
-  h2 {
-    font-size: 36px;
-    line-height: 54px;
-  }
-
-  h3 {
-    border-bottom: 2px solid #ccc;
-    font-size: 24px;
-    line-height: 36px;
-    margin-bottom: 16px;
-  }
-
-  h4 {
-    font-size: 18px;
-    line-height: 36px;
-  }
-
-  p {
-    margin-bottom: 18px;
-  }
-
-  .main {
-    overflow: hidden;
-  }
-
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
-  }
-
-  .sidebar {
-    background: #eee;
-    border: 1px solid #ccc;
-    float: right;
-    padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
-  }
-
-  .sidebar ul {
-    font-size: 14px;
-  }
-
-  .branding {
-    clear: both;
-  }
-
-  footer.branding {
-    border-top: 2px solid #ccc;
-    margin-top: 20px;
-    padding-top: 20px;
-  }
+*{
+  margin: auto;
+  padding: auto;
+  font-family: "Courier New", Courier, monospace
 }
 
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    position: fixed;
-    margin-top: 25px;
-    margin-left: 25px;
-  }
-
-  ul li {
-    text-align: center;
-    display: inline-block;
-  }
-
-  ul li a {
-    text-decoration: none;
-    color: #fff;
-    padding: 5px 20px;
-    border: 2px solid #fff;
-    transition: 0.06s ease;
-      }
-
-  ul li a:hover{
-    background-color: rgb(168, 155, 170);
-    color: #000
-  }
-
-  ul li.active a{
-    background-color: #fff;
-    color: #000
-  }
-
-  h1 {
-    font-size: 50px;
-    line-height: 54px;
-    color: rgb(236, 208, 208);
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-  }
-
-
-  .title{
-    position: absolute;
-    top: 30%;
-    left: 83%;
-    transform: translate(-50%,-50%);
-  }
-
-  .title h1{
-    color: rgb(236, 208, 208);
-  }
-
-  @media screen and (max-width: 600px) {
-    .wrapper {
-      -moz-box-shadow: none;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      width: auto;
-    }
-  
-    .content, .sidebar {
-      float: none;
-      width: 100%;
-    }
-  
-    .sidebar {
-      background: transparent;
-      border: none;
-      border-top: 2px solid #ccc;
-      padding: 0;
-    }
-  
-    h1 {
-      font-size: 24px;
-      line-height: 36px;
-    }
-  
-    h2 {
-      font-size: 18px;
-      line-height: 24px;
-    }
+html {
+  background-image:url(../images/pexels-cottonbro.jpg); 
+  height: 85vh;
+  background-size: cover;
+  background-position: center;
+  background-color: #000;
 }
-  
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  position: fixed;
+  margin-top: 25px;
+  margin-left: 25px;
+}
+
+ul li {
+  text-align: center;
+  display: inline-block;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 5px 20px;
+  border: 2px solid #fff;
+  transition: 0.06s ease;
+}
+
+ul li a:hover{
+  background-color: rgb(168, 155, 170);
+  color: #000
+}
+
+ul li.active a{
+  background-color: #fff;
+  color: #000
+}
+
+/* unvisited link */
+a:link {
+  color: grey;
+}
+
+/* visited link */
+a:visited {
+  color: red;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
+
+.title{
+  position: absolute;
+  top: 30%;
+  left: 83%;
+  transform: translate(-50%,-50%);
+}
+
+.title h1{
+  color: rgb(236, 208, 208);
+}
+
+h1 {
+  font-size: 50px;
+  line-height: 54px;
+  color: rgb(236, 208, 208);
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+.main {
+  overflow: hidden;
+}
+
+.wrapper {
+  background: rgb(247, 238, 238);
+  -moz-box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  -webkit-box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  margin: 100px 30px;
+  max-width: 960px;
+  padding: 2.25%; /* 18px / 800px */
+  width: 35%;
+  text-align: end;
+}
+
+.branding {
+  clear: both;
+}
+
+footer.branding {
+  border-top: 2px solid #ccc;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+
+
