--- a/app/views/clients/new.erb
+++ b/app/views/clients/new.erb
@@ -2,13 +2,13 @@
     <h1> BOOK YOUR NEW CLIENT</h1>
 
         <form method="POST" action="/clients/new">
-
-            <p>First Name: <input type="text" name="first_name"></p>
-            <p>Last Name: <input type="text" name="last_name"></p>
-            <p>Design Description: <input type="text" name="description"></p>
-            <p>Design Location: <input type="text" name="location"></p>
-            <p>Quoted Price: $<input type="number" name="price"></p>
-            <p>Appointment Date: <input type="date" name="appt_date"></p>
+            <br>
+            <p>First Name: <input type="text" name="first_name"></p><br>
+            <p>Last Name: <input type="text" name="last_name"></p><br>
+            <p>Design Description: <input type="text" name="description"></p><br>
+            <p>Design Location: <input type="text" name="location"></p><br>
+            <p>Quoted Price: $<input type="number" name="price"></p><br>
+            <p>Appointment Date: <input type="date" name="appt_date"></p><br>
         
             <input type="submit" value="BOOK CLIENT">
     </form>
