--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,13 +1,12 @@
-<h1>Nice seeing you again!</h1>
+<h1>Hello again!</h1>
 <br>
 <form method="POST" action="/users/login">
    
-    <label for="email"> Email:</label>
-    <input type="email" name="email">
-
-    <label for="password"> Password: </label>
-    <input type="password" name="password"  autocomplete="off">
+    <p><label for="email"> Email:</label>
+    <input type="email" name="email" autocomplete="off"></p>
     <br>
+    <p><label for="password"> Password: </label>
+    <input type="password" name="password"  autocomplete="off"></p>
     <br>
     <input type="submit" value="Login">
     
