--- a/app/views/clients/index.erb
+++ b/app/views/clients/index.erb
@@ -1,12 +1,11 @@
 <% @clients.each do |client| %>
 
 <div class="inner-wrapper">
-<h3><%= client.first_name%>
-      <%= client.last_name%></h3>
+<h3><a href="/clients/<%= client.id %>"><%= client.first_name%>
+      <%= client.last_name%></a></h3>
 <p>Design Description: <%= client.description%><br>
 Location: <%= client.location%><br>
-Price: $<%= client.price%><br>
-Appointment Date: <%= client.appt_date%></p><br><br>
+Artist: <%= client.user.name %><br><br>
 </div>
         
 <% end %>
