--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,10 +8,12 @@
     <header>
       <div class="main">
         <ul>
+        <% if logged_in?%>
           <li><a href="/">Home</a></li>
           <li><a href="/clients">View Clients</a></li>
           <li><a href="/clients/new">Add A Client</a></li>
           <li><a href="/users/:id/logout">Logout</a></li>
+          <%end%>
         </ul>
       </div>
       <div class="title">
