--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,11 @@
-<h1> Welcome, <%= @user.name %> </h1>
+<h1> Welcome, <%= @user.name %> </h1><br>
 
+<p> Thank you for using Ink Complete. To navigate this application,
+use the links above in the navigation bar.
+If you'd like to see what other Tattoo Artists are cooking up,
+head over to the View Clients tab. This is also where you'll see your clientele. </p>
 
-<a href="/clients/new">Add A Client</a>
+<br>
+<h3> Now, let's book some folks!! </h3>
+
 
